Fixed overflowing of content now. Added technical skills in the about section.

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -33,6 +33,7 @@ li {
     height: 35px;
     align-items: center;
     margin: 0 auto;
+    min-width: 284.8px;
     width: 65vw;
     box-shadow: 0px 1px 5px #747474;
 }
@@ -153,16 +154,17 @@ input:checked + .slider:before {
 }
 
 /* Media Query for Desktop */
-@media only screen and (max-width: 1022px) {
+@media (max-width: 1022px) {
     /* .heading {
         font-size: 50em;
     } */
 }
 
-@media only screen and (max-width: 1300px) {
+@media (max-width: 1300px) {
     .logo {
         position: static;
     }
+
     .menu {
         display: none;
         flex-direction: column;
@@ -191,7 +193,7 @@ input:checked + .slider:before {
 
 }
 
-@media only screen and (min-width: 970px){
+@media (970px <= width){
     /* Navbar */
     .logo {
         left: 2.5em;
@@ -201,29 +203,43 @@ input:checked + .slider:before {
         display: flex;
     }
 
+    .landing {
+        height: 40%;
+        
+        .heading {
+            padding-top: 10rem;
+            padding-bottom: 3rem;
+        }
+
+        .typewriter {
+            display: flex;
+            justify-content: center;
+            font-size: 5rem !important;
+        }
+    }
+
     /* General */
-    /* .container {
+    .section-content {
         display: flex;
         justify-content: center;
-        align-items: center;
-
-    } */
-
-    .firstname {
-        padding-right: 55px;
+    }
+    .heading {
+        display: flex;
+        justify-content: center;
+        font-size: 12em;
+        width: 80vw;
     }
 
-    .heading {
-        display: inline-block;
-        position: relative;
-        right: 21px;
-        height: 10px;
-        font-size: 12em !important;
+    .about-me .intro-name{
+        display: flex;
+        justify-content: center;
     }
     
-    .typewriter {
+    /* .typewriter {
+        display: flex;
+        justify-content: center;
         font-size: 50px !important;
-    }
+    } */
 
     /* .resume-button {
         position: relative;
