--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,4 +1,4 @@
-.project-header {
+/* .project-header {
     font-family: 'Poppins Semi Bold';
     font-size: 3rem;
     display: inline-block;
@@ -15,4 +15,4 @@
     margin-bottom: 40dvh;
     font-size: 2rem;
     padding-left: 20dvw;
-}
+} */
