--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,10 +5,11 @@ body {
 }
 
 .container {
-    /* border: 5px solid blue; */
-    width: 85vw;
-    height: 200vw;
+    min-width: 385px;
+    width: 80vw;
+    height: 200vh;
     margin: 0 auto;
+    /* border: 5px solid rgba(7, 252, 81, 0.589); */
 }
 
 .section {
@@ -18,8 +19,9 @@ body {
     padding-bottom: 15pt;
     padding-top: 18pt;
     border-radius: 30px;
-    width: 85vw;
-    box-shadow: 0px 1px 5px #747474;
+    box-shadow: 0px 1px 10px #747474;
+    min-width: 385px;
+    width: 80vw;
 }
 
 .section-content {
@@ -79,6 +81,8 @@ body {
 }
 
 .about-me {
+    margin: 0 auto;
+    max-width: 95%;
     font-weight:600;
 }
 
@@ -92,6 +96,7 @@ body {
 
 .intro-description {
     display: flex;
+    overflow-x: hidden;
     flex-direction: row;
     font-size: 16px;
 }
@@ -128,4 +133,5 @@ body {
 
 .tech-skills.show {
     display: flex;
+    justify-content: center;
 }
